Add more content and finish frontpage

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no" class="h-full text-gray-600 bg-gray-100 font-source-sans">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/main.min.css" />
+  <meta name="description" content="En prototype av forsiden til nav.no laget med Eleventy og Tailwind CSS" />
   <title>
     {% if title %}
     {{ title }} &ndash;
     {% endif %}
     {{ site.title }}
   </title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>">
+  <link rel="stylesheet" href="/main.min.css" />
+  <script src="/main.min.js" defer></script>
 </head>
-<body>
+<body class="h-full" x-data="{ menuOpen: false }">
   {% block content %}
   {% endblock %}
 </body>
