--- a/src/index.njk
+++ b/src/index.njk
@@ -67,7 +67,7 @@ title: 'Privatperson'
           {% if section.extraLink %}
             <div class="flex items-start gap-2 mt-8 text-blue hover:text-blue-dark group">
               <svg aria-hidden="true" focusable="false" class="block w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
-              <a class="text-lg leading-tight" href="#">{{ section.extraLink }}</a>
+              <a class="text-lg leading-tight hover:underline" href="#">{{ section.extraLink }}</a>
             </div>
           {% endif %}
         </div>
