--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -13,6 +13,8 @@
   </title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>">
   <link rel="stylesheet" href="/main.min.css" />
+  <link rel="preload" href="/fonts/source-sans-3-regular-webfont.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="/fonts/source-sans-3-bold-webfont.woff2" as="font" type="font/woff2" crossorigin />
   <script src="/main.min.js" defer></script>
 </head>
 <body class="h-full" x-data="{ menuOpen: false }">
