--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<header class="bg-white shadow">
+<header class="relative z-10 bg-white {% if page.fileSlug === 'forsiden' %}shadow{% endif %}">
   <div class="hidden px-5 border-b border-gray-300 sm:px-8 sm:block">
     <ul class="flex justify-center gap-4 sm:gap-8" role="tablist">
       <li role="tab" aria-selected="true" class="flex">
@@ -31,12 +31,12 @@
         <div class="flex items-center flex-1 gap-1 ml-auto sm:gap-4 sm:ml-0">
           <a class="px-2 py-2 ml-auto text-xl rounded sm:px-4 sm:order-1 sm:border-2 sm:border-blue text-blue" href="#">Logg inn</a>
 
-          <button class="flex items-center gap-2 px-3 py-2 -mr-3 text-xl rounded text-blue" type="button" x-on:click="menuOpen = !menuOpen">
+          <button class="flex items-center gap-2 px-3 py-2 -mr-3 text-xl rounded text-blue" type="button" x-on:click="menuOpen = !menuOpen, searchOpen = false">
             <svg class="w-6 h-6" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M28 7H0V4H28V7ZM28 15H0V12H28V15ZM0 23H28V20H0V23Z" /></svg>
             <span>Meny</span>
           </button>
 
-          <button class="hidden gap-1 px-3 py-2 text-xl rounded sm:items-center text-blue sm:flex">
+          <button class="hidden gap-1 px-3 py-2 text-xl rounded sm:items-center text-blue sm:flex" x-on:click="searchOpen = !searchOpen, menuOpen = false">
             <svg class="w-6 h-6" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z"/></svg>
             <span>Søk</span>
           </button>
@@ -45,9 +45,9 @@
     </div>
   </div>
 </header>
-<nav class="relative">
-  <div class="absolute inset-x-0 px-5 pt-2 pb-12 bg-white shadow-xl top-full md:px-8" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-    <div class="max-w-screen-xl mx-auto xs:w-11/12 md:w-10/12">
+<nav class="relative z-10">
+  <div class="absolute inset-x-0 z-10 px-5 pt-6 pb-12 bg-white shadow-xl top-full md:px-8" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
+    <div class="max-w-screen-xl mx-auto">
       <div class="gap-3 columns-[42ch] md:gap-6">
         {% for section in menu.sectionList %}
           <div class="pr-4 mb-8 sm:max-w-xs break-inside-avoid">
@@ -65,4 +65,17 @@
       </div>
     </div>
   </div>
+  <div class="absolute inset-x-0 z-10 px-5 pt-6 pb-12 bg-white shadow-xl top-full md:px-8" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
+    <div class="max-w-screen-xl mx-auto xs:w-11/12 md:w-10/12">
+      <form class="flex max-w-lg gap-2 mx-auto">
+        <label class="grid gap-1" for="search">
+          <span class="sr-only">Søk</span>
+        </label>
+        <input class="flex-1 p-2 text-lg border-2 rounded border-blue " id="search" type="text">
+        <button class="px-6 py-2 text-xl text-white rounded bg-blue" type="submit">Søk</button>
+      </form>
+    </div>
+  </div>
 </nav>
+<button class="fixed inset-0 w-full h-full bg-black/20" x-bind:class="(menuOpen || searchOpen) ? 'opacity-0 animate-dropdown' : 'hidden'"></button>
+
