--- a/src/_includes/partials/breadcrumbs.njk
+++ b/src/_includes/partials/breadcrumbs.njk
@@ -2,7 +2,7 @@
   <nav class="max-w-screen-xl mx-auto xs:w-11/12" aria-label="Brødsmulesti" itemprop="breadcrumb">
     <ol class="flex flex-wrap items-center gap-3">
       <li class="flex items-center gap-3">
-        <a class="flex gap-3 underline text-blue" href="#">
+        <a class="flex gap-3 underline text-blue-500" href="#">
           <svg viewBox="0 0 24 24" width="24" height="24"><path d="M3.5 13.5v10h6v-7h5v7h6V14m-20-1L12 1.5 23.5 13M16 2.5h3.5V6" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="none"/></svg>
           <span>nav.no</span>
         </a>
@@ -11,7 +11,7 @@
         </svg>
       </li>
       <li class="flex items-center gap-3">
-        <a class="underline text-blue" href="#">
+        <a class="underline text-blue-500" href="#">
           <span>Privatperson</span>
         </a>
         <svg class="opacity-50" viewBox="0 0 24 24" width="24" height="24" fill="none" focusable="false" aria-hidden="true">
