--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
 
-<div class="px-5 text-white bg-blue-dark sm:px-8">
+<div class="px-5 text-white bg-blue-800 sm:px-8">
   <div class="max-w-screen-xl mx-auto xs:w-11/12 ">
     <div class="flex flex-col items-center py-3">
       <a class="text-lg text-center" href="#">Til toppen</a>
@@ -39,7 +39,7 @@
     </svg>
     <div class="mt-3">
       <div class="pt-px">Arbeids- og velferdsetaten</div>
-      <div class="flex flex-col md:flex-row justify-between flex-1 gap-3 mt-4 md:my-1.5 text-blue">
+      <div class="flex flex-col md:flex-row justify-between flex-1 gap-3 mt-4 md:my-1.5 text-blue-500">
         <a class="underline hover:no-underline" href="#">Personvern og informasjonskapsler</a>
         <a class="underline hover:no-underline" href="#">Tilgjengelighet</a>
         <a class="underline hover:no-underline" href="#">Del skjerm med veileder</a>
