--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,17 +2,17 @@
   <div class="hidden px-5 border-b border-gray-300 sm:px-8 sm:block">
     <ul class="flex justify-center gap-4 sm:gap-8" role="tablist">
       <li role="tab" aria-selected="true" class="flex">
-        <a href="#" class="pt-2.5 pb-2 border-b-3 border-blue">
+        <a href="#" class="pt-2.5 pb-2 border-b-3 border-blue-500">
           Privatperson
         </a>
       </li>
       <li role="tab" aria-selected="false" class="flex">
-        <a href="#" class="pt-2.5 pb-2 border-b-3 border-white hover:border-blue">
+        <a href="#" class="pt-2.5 pb-2 border-b-3 border-white hover:border-blue-500">
           Arbeidsgiver
         </a>
       </li>
       <li role="tab" aria-selected="false" class="flex">
-        <a href="#" class="pt-2.5 pb-2 border-b-3 border-white hover:border-blue">
+        <a href="#" class="pt-2.5 pb-2 border-b-3 border-white hover:border-blue-500">
           Samarbeidspartner
         </a>
       </li>
@@ -29,14 +29,14 @@
           <span class="sr-only">NAV</span>
         </a>
         <div class="flex items-center flex-1 gap-1 ml-auto sm:gap-4 sm:ml-0">
-          <a class="px-2 py-2 ml-auto text-xl rounded sm:px-4 sm:order-1 sm:border-2 sm:border-blue text-blue" href="#">Logg inn</a>
+          <a class="px-2 py-2 ml-auto text-xl rounded sm:px-4 sm:order-1 sm:border-2 sm:border-blue-500 text-blue-500" href="#">Logg inn</a>
 
-          <button class="flex items-center gap-2 px-3 py-2 -mr-3 text-xl rounded text-blue" type="button" x-on:click="menuOpen = !menuOpen, searchOpen = false">
+          <button class="flex items-center gap-2 px-3 py-2 -mr-3 text-xl rounded text-blue-500" type="button" x-on:click="menuOpen = !menuOpen, searchOpen = false">
             <svg class="w-6 h-6" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M28 7H0V4H28V7ZM28 15H0V12H28V15ZM0 23H28V20H0V23Z" /></svg>
             <span>Meny</span>
           </button>
 
-          <button class="hidden gap-1 px-3 py-2 text-xl rounded sm:items-center text-blue sm:flex" x-on:click="searchOpen = !searchOpen, menuOpen = false">
+          <button class="hidden gap-1 px-3 py-2 text-xl rounded sm:items-center text-blue-500 sm:flex" x-on:click="searchOpen = !searchOpen, menuOpen = false">
             <svg class="w-6 h-6" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z"/></svg>
             <span>Søk</span>
           </button>
@@ -54,7 +54,7 @@
             <div class="text-xl font-semibold">{{ section.title }}</div>
             <ul class="flex flex-col items-start">
             {% for link in section.linkList %}
-              <li class="flex items-start gap-2 mt-2 text-blue hover:text-blue-dark group">
+              <li class="flex items-start gap-2 mt-2 text-blue-500 hover:text-blue-800 group">
                 <svg aria-hidden="true" focusable="false" class="w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
                 <a class="text-lg leading-tight underline hover:no-underline " href="#">{{ link.text }}</a>
               </li>
@@ -71,8 +71,8 @@
         <label class="grid gap-1" for="search">
           <span class="sr-only">Søk</span>
         </label>
-        <input class="flex-1 p-2 text-lg border-2 rounded border-blue " id="search" type="text">
-        <button class="px-6 py-2 text-xl text-white rounded bg-blue" type="submit">Søk</button>
+        <input class="flex-1 p-2 text-lg border-2 rounded border-blue-500 " id="search" type="text">
+        <button class="px-6 py-2 text-xl text-white rounded bg-blue-500" type="submit">Søk</button>
       </form>
     </div>
   </div>
