--- a/src/forsiden/forsiden.njk
+++ b/src/forsiden/forsiden.njk
@@ -11,7 +11,7 @@ title: 'Forsiden – Privatperson'
       <div class="grid max-w-screen-xl gap-3 mx-auto md:gap-6 xs:w-11/12">
         <div class="grid w-full max-w-5xl gap-3 mx-auto xl:w-10/12 md:grid-cols-2 md:gap-6">
           {% for link in importantLinks %}
-            <a class="flex items-center justify-between gap-2 px-6 py-5 bg-white rounded shadow group text-blue hover:ring-2 hover:ring-blue hover:shadow-xl focus:shadow-xl" href="#">
+            <a class="flex items-center justify-between gap-2 px-6 py-5 text-blue-500 bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
               <div class="flex items-center gap-3">
                 {{ link.image | svgContents('w-7 h-7 flex-shrink-0') | safe }}
                 <h3 class="mt-1 text-xl font-semibold leading-tight group-hover:underline ">{{ link.title }}</h3>
@@ -28,10 +28,10 @@ title: 'Forsiden – Privatperson'
         <h1 class="text-3xl font-semibold text-center sm:text-4xl md:text-5xl">Privatperson</h1>
         <div class="grid gap-3 md:gap-6 md:grid-cols-3">
           {% for link in promotedLinks %}
-            <a class="flex flex-col items-center gap-4 px-6 py-8 text-center bg-white rounded shadow group hover:ring-2 hover:ring-blue hover:shadow-xl focus:shadow-xl" href="#">
-              <div class="">{{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 transition duration-200 ease-out text-blue') | safe }}</div>
+            <a class="flex flex-col items-center gap-4 px-6 py-8 text-center bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
+              <div class="">{{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 transition duration-200 ease-out text-blue-500') | safe }}</div>
               <div>
-                <h2 class="mt-1 text-2xl font-semibold leading-tight text-blue group-hover:underline">{{ link.title | safe }}</h2>
+                <h2 class="mt-1 text-2xl font-semibold leading-tight text-blue-500 group-hover:underline">{{ link.title | safe }}</h2>
                 <p class="mt-1 text-lg leading-snug text-gray-600">{{ link.description | safe }}</p>
               </div>
             </a>
@@ -41,10 +41,10 @@ title: 'Forsiden – Privatperson'
         <h2 class="mt-6 text-2xl font-semibold text-center sm:text-3xl md:text-4xl">Hva er situasjonen din?</h2>
         <div class="grid gap-3 md:gap-6 md:grid-cols-2 lg:grid-cols-3">
           {% for link in situationLinks %}
-            <a class="flex items-start gap-4 px-8 py-8 transition duration-200 bg-white rounded shadow group hover:ring-2 hover:ring-blue hover:shadow-xl focus:shadow-xl" href="#">
-              {{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 ease-out duration-75 transition text-blue') | safe }}
+            <a class="flex items-start gap-4 px-8 py-8 transition duration-200 bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
+              {{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 ease-out duration-75 transition text-blue-500') | safe }}
               <div>
-              <h3 class="mt-1 text-2xl font-semibold leading-tight text-blue group-hover:underline ">{{ link.title | safe }}</h3>
+              <h3 class="mt-1 text-2xl font-semibold leading-tight text-blue-500 group-hover:underline ">{{ link.title | safe }}</h3>
               <p class="mt-1.5 text-lg leading-snug">{{ link.description | safe }}</p>
               </div>
             </a>
@@ -58,7 +58,7 @@ title: 'Forsiden – Privatperson'
             <ul class="flex flex-col items-start">
             {% for link in section.linkList %}
               <li class="mb-2">
-                <div class="flex items-start gap-2 mt-2 text-blue hover:text-blue-dark group">
+                <div class="flex items-start gap-2 mt-2 text-blue-500 hover:text-blue-800 group">
                   <svg aria-hidden="true" focusable="false" class="w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
                   <a class="text-lg leading-tight underline hover:no-underline " href="#">{{ link.text }}</a>
                 </div>
@@ -69,7 +69,7 @@ title: 'Forsiden – Privatperson'
             {% endfor %}
             </ul>
             {% if section.extraLink %}
-              <div class="flex items-start gap-2 mt-8 text-blue hover:text-blue-dark group">
+              <div class="flex items-start gap-2 mt-8 text-blue-500 hover:text-blue-800 group">
                 <svg aria-hidden="true" focusable="false" class="block w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
                 <a class="text-lg leading-tight hover:underline" href="#">{{ section.extraLink }}</a>
               </div>
