--- a/src/livssituasjon/livssituasjon.njk
+++ b/src/livssituasjon/livssituasjon.njk
@@ -2,6 +2,8 @@
 title: 'Er helt eller delvis alene med barn'
 subtitle: 'Dette kan du ha rett til'
 updated: 'Oppdatert 15. desember 2021'
+permalink: false
+eleventyExcludeFromCollections: true
 ---
 {% extends "base.njk" %}
 
@@ -39,13 +41,13 @@ updated: 'Oppdatert 15. desember 2021'
           <p class="mb-6">Da kan du ha rett til støtte som gjenlevende.</p>
 
           <a href="#"
-          class="flex items-center gap-4 py-2 pl-2 pr-4 transition duration-200 rounded-lg shadow sm:pr-8 sm:py-4 sm:pl-4 shadow-butter-light bg-butter group hover:bg-white hover:shadow-sm hover:ring-2 hover:ring-blue"
+          class="flex items-center gap-4 py-2 pl-2 pr-4 transition duration-200 rounded-lg shadow sm:pr-8 sm:py-4 sm:pl-4 shadow-butter-light bg-butter group hover:bg-white hover:shadow-sm hover:ring-2 hover:ring-blue-500"
           title="Er alene med barn fordi den andre forelderen er død">
             <svg class="w-16 h-16 shrink-0" viewbox="0 0 98 97" width="98" height="97" fill="none">
               <path fill="#FFECCC" fill-rule="evenodd" d="m61.38 36.78-2.7-2.93A15 15 0 0 0 47.64 29H37a23 23 0 0 0-23 23v44h-2V52a25 25 0 0 1 25-25h10.64a17 17 0 0 1 12.52 5.5l3.55 3.86C68.54 37.85 77 53.53 77 62.69c0 9.61-6.27 16.83-14 16.83S49 73.3 49 62.69c0-8.6 7.46-22.97 12.38-25.91Z" clip-rule="evenodd"/>
               <path fill="#262626" fill-rule="evenodd" d="M67.52 18.73c.35-1.97.89-3.7 1.55-4.84 1.41-2.44 3.13-3.7 4.7-4.2 1.55-.5 3.2-.33 4.73.55 2.7 1.56 4.02 5.67 1.54 9.95-.49.84-1.28 1.78-2.28 2.73-3.92 1.3-8.05 3.65-10.21 5.73.53-2.62.53-6.42-.03-9.92ZM52.7 25.57c2.9 2.62 6.77 4.96 9.69 5.95a9.48 9.48 0 0 1-1.2 1.02c-1.75.74-3.7 1.85-5.55 3.15-2.52 1.1-5.01 1.78-6.75 1.78-2.83 0-4.8-.84-6.01-1.95A5.7 5.7 0 0 1 41 31.18c0-3.09 2.9-6.3 7.89-6.3 1.05 0 2.37.25 3.8.7Zm-3.21-3.67a9.74 9.74 0 0 1-.13-.21C45.93 15.76 47.54 10.2 52 7.65c4.46-2.57 10.42-.62 13.53 4.74.16.29.32.6.47.92.15-.32.3-.63.47-.92C69.91 6.46 75.54 5.1 80 7.65c4.46 2.56 5.75 8.67 2.64 14.04l-.13.21.6-.02c6.87 0 10.89 4.16 10.89 9.3 0 4.14-3.04 7.65-7.48 8.85A14.42 14.42 0 0 1 95.5 53.4V97h-3V53.39c0-5.75-4.25-10.5-9.76-11.3 3.3 5.86 1.68 11.32-2.74 13.86-4.46 2.56-10.42.62-13.53-4.75-.16-.28-.32-.59-.47-.91-.15.32-.3.63-.47.91-3.11 5.37-9.07 7.31-13.53 4.75-4.46-2.57-6.07-8.11-2.64-14.04.3-.51.66-1.03 1.08-1.55-.54.07-1.06.11-1.55.11-6.87 0-10.89-4.16-10.89-9.3 0-5.13 4.67-9.29 10.89-9.29.2 0 .4 0 .6.02Zm4.75 1.02c-1-.95-1.8-1.89-2.28-2.73-1.4-2.43-1.65-4.54-1.3-6.14a5.73 5.73 0 0 1 2.84-3.8c2.7-1.56 6.94-.65 9.43 3.64.66 1.14 1.2 2.87 1.55 4.84-.56 3.5-.56 7.3-.02 9.93-2.17-2.09-6.3-4.43-10.22-5.74Zm10.24 21.94c-.56-3.5-.56-7.3-.02-9.93a6.23 6.23 0 0 0-.1-.3 13.06 13.06 0 0 0-1.67.53 31.97 31.97 0 0 1-5.58 3.15c-2.31 1.67-4.25 3.55-5.15 5.1-1.4 2.43-1.65 4.54-1.3 6.14a5.73 5.73 0 0 0 2.84 3.8c2.7 1.56 6.94.64 9.43-3.64.66-1.15 1.2-2.88 1.55-4.85Zm4.6 4.85a15.64 15.64 0 0 1-1.56-4.85c.56-3.5.56-7.3.02-9.93l.1-.3a13.05 13.05 0 0 1 1.67.53 31.97 31.97 0 0 0 5.57 3.15c2.32 1.67 4.26 3.55 5.16 5.1 1.4 2.43 1.65 4.54 1.3 6.14a5.73 5.73 0 0 1-2.84 3.8c-2.7 1.56-6.94.64-9.43-3.64Zm7.28-14.03c-1.85-1.3-3.8-2.4-5.55-3.14a13.86 13.86 0 0 1-1.2-1.02c2.92-1 6.78-3.33 9.7-5.95a13.7 13.7 0 0 1 3.8-.69c2.83 0 4.8.85 6.01 1.95A5.7 5.7 0 0 1 91 31.18c0 3.08-2.9 6.3-7.89 6.3-1.74 0-4.23-.7-6.75-1.8ZM19.08 70.8c1.34-2.44 2.2-5.1 2.2-6.67 0-1.97-.57-3.24-1.24-3.98A3.4 3.4 0 0 0 17.43 59c-1.71 0-3.86 1.68-3.86 5.12 0 1.57.87 4.23 2.2 6.67.57 1.04 1.15 1.9 1.66 2.5.5-.6 1.08-1.46 1.65-2.5ZM15.85 76c-2.35-2.21-5.28-8.16-5.28-11.87 0-4.64 3.07-8.12 6.86-8.12 3.79 0 6.86 3 6.86 8.12 0 2.52-1.36 6.08-2.97 8.8 2.68-1.63 6.19-3 8.68-3 5.05 0 8 3.1 8 6.95 0 3.84-3.43 6.96-8 6.96-3.85 0-10.12-3.29-12.01-5.71a11.57 11.57 0 0 0-4.2 8.92v1.68a13.3 13.3 0 0 1 10.07 6.52l-2.58 1.52a10.45 10.45 0 0 0-17.99 0L.71 95.24a13.3 13.3 0 0 1 10.08-6.52v-1.68c0-4.31 1.9-8.32 5.06-11.04Zm7.62-.85c2.4-1.36 5-2.23 6.53-2.23 1.9 0 3.14.58 3.86 1.25a3.57 3.57 0 0 1 1.14 2.7c0 1.85-1.72 3.97-5 3.97-1.52 0-4.12-.87-6.53-2.23a15.5 15.5 0 0 1-2.53-1.73 15.5 15.5 0 0 1 2.53-1.73Z" clip-rule="evenodd"/>
             </svg>
-            <span class="text-lg font-semibold leading-snug underline group-hover:no-underline group-hover:text-blue-dark">Er alene med barn fordi den andre forelderen er død</span>
+            <span class="text-lg font-semibold leading-snug underline group-hover:no-underline group-hover:text-blue-800">Er alene med barn fordi den andre forelderen er død</span>
           </a>
         </div>
 
@@ -53,52 +55,52 @@ updated: 'Oppdatert 15. desember 2021'
           <h2>Innhold</h2>
           <ul>
             <li>
-              <a class="underline text-blue" href="#" id="fodsel-a">
+              <a class="underline text-blue-500" href="#" id="fodsel-a">
                 Er du alene med barn fra fødsel?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="samlivsbrudd-a">
+              <a class="underline text-blue-500" href="#" id="samlivsbrudd-a">
                 Er du alene med barn på grunn av samlivsbrudd?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="penger-a">
+              <a class="underline text-blue-500" href="#" id="penger-a">
                 Pengestøtte når du er alene med barn
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="bidrag-a">
+              <a class="underline text-blue-500" href="#" id="bidrag-a">
                 Bidrag fra den andre forelderen
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="sykt-barn-a">
+              <a class="underline text-blue-500" href="#" id="sykt-barn-a">
                 Er barnet ditt sykt eller skadet?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="barnehage-a">
+              <a class="underline text-blue-500" href="#" id="barnehage-a">
                 Har ikke barnet ditt full barnehageplass?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="arbeid-a">
+              <a class="underline text-blue-500" href="#" id="arbeid-a">
                 Er du arbeidssøker?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="okonomi-a">
+              <a class="underline text-blue-500" href="#" id="okonomi-a">
                 Har du økonomiske problemer?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="boforhold-a">
+              <a class="underline text-blue-500" href="#" id="boforhold-a">
                 Har du vanskelige hjemmeforhold eller bosituasjon?
               </a>
             </li>
             <li>
-              <a class="underline text-blue" href="#" id="andre-a">
+              <a class="underline text-blue-500" href="#" id="andre-a">
                 Andre som kan hjelpe
               </a>
             </li>
