Testing frontpage animations

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,7 +5,7 @@
   <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="En prototype av forsiden til nav.no laget med Eleventy og Tailwind CSS" />
+  <meta name="description" content="" />
   <title>
     {% if title %}
     {{ title }} &ndash;
@@ -18,7 +18,7 @@
   <link rel="preload" href="/fonts/source-sans-pro-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin />
   <script src="/main.min.js" type="text/javascript" defer></script>
 </head>
-<body class="min-h-full overflow-y-scroll bg-gray-100" x-data="{ menuOpen: false, searchOpen: false }">
+<body class="min-h-full overflow-y-scroll" x-data="{ menuOpen: false, searchOpen: false }">
   <nav id="site-skiplinks" class="absolute flex flex-col items-center p-1" aria-label="Hopp til innhold">
     <a href="#" class="sr-only">Hovedmeny</a>
     <a href="#" class="sr-only">Søk</a>
