--- a/src/navigasjon/navigasjon.njk
+++ b/src/navigasjon/navigasjon.njk
@@ -9,39 +9,30 @@ title: 'Navigasjon'
   <div class="relative px-5">
     <div class="max-w-screen-xl mx-auto xs:w-[95%]">
       <div class="flex items-center w-full gap-4">
-        <a href="#" class="block -ml-3.5 my-4">
-          <svg class="-mt-px h-9 xs:h-12" width="78" height="50" viewBox="0 0 78 50" aria-hidden="true" focusable="false">
-            <path fill="#C30000" fill-rule="evenodd" d="M36.335 49.483c-13.524 0-24.49-10.964-24.49-24.49C11.845 11.467 22.81.5 36.335.5c13.53 0 24.496 10.967 24.496 24.493 0 13.526-10.967 24.49-24.496 24.49ZM0 35.687l5.006-12.39h4.81l-5 12.39H0Zm61.775 0 4.942-12.39h2.623l-4.942 12.39h-2.623Zm9.719 0 4.941-12.39h1.393l-4.942 12.39h-1.392Z" clip-rule="evenodd"/>
-            <path fill="#fff" fill-rule="evenodd" d="M57.227 23.298h-4.354s-.3 0-.406.265l-2.41 7.376-2.407-7.376c-.106-.265-.408-.265-.408-.265H38.87a.336.336 0 0 0-.333.331v2.505c0-1.987-2.115-2.836-3.353-2.836-2.773 0-4.628 1.826-5.206 4.602-.032-1.842-.185-2.502-.681-3.177-.228-.331-.557-.61-.916-.84-.739-.433-1.402-.585-2.827-.585h-1.673s-.303 0-.41.265l-1.522 3.773v-3.707c0-.18-.15-.331-.332-.331h-3.872s-.299 0-.408.265l-1.582 3.923s-.158.392.203.392h1.488v7.476a.33.33 0 0 0 .333.333h3.838a.333.333 0 0 0 .332-.333v-7.476h1.496c.859 0 1.04.024 1.375.18a.95.95 0 0 1 .481.406c.203.381.253.839.253 2.188v4.702c0 .186.15.333.333.333h3.68s.415 0 .58-.41l.815-2.016c1.084 1.518 2.869 2.426 5.086 2.426h.485s.418 0 .584-.41l1.42-3.517v3.594c0 .186.152.333.333.333h3.756s.414 0 .58-.41c0 0 1.502-3.73 1.508-3.758h.002c.058-.31-.334-.31-.334-.31h-1.34V24.81l4.217 10.465c.165.41.58.41.58.41h4.437s.417 0 .582-.41L57.534 23.7c.161-.401-.307-.401-.307-.401Zm-18.69 7.91h-2.523a1.82 1.82 0 1 1 0-3.639h.705c1.002 0 1.818.818 1.818 1.822v1.818Z" clip-rule="evenodd"/>
-          </svg>
+        <a href="#" class="block my-4">
+          <svg class="w-16 h-5" width="64" height="20" fill="none" aria-hidden="true" role="img" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M63.48.52h-6.66s-.459 0-.621.406l-3.685 11.287L48.832.926c-.163-.405-.624-.405-.624-.405H35.404a.514.514 0 00-.51.507v3.833c0-3.04-3.233-4.34-5.127-4.34-4.24 0-7.078 2.794-7.962 7.043-.048-2.819-.282-3.829-1.041-4.863-.349-.507-.852-.932-1.4-1.285-1.13-.662-2.145-.895-4.324-.895h-2.56s-.462 0-.625.405L9.526 6.7V1.028A.512.512 0 009.02.521H3.097s-.457 0-.624.405L.053 6.93s-.242.6.31.6H2.64v11.44c0 .284.223.51.508.51h5.87a.509.509 0 00.508-.51V7.53h2.289c1.313 0 1.59.036 2.101.274.308.117.585.352.737.623.31.583.387 1.283.387 3.348v7.195c0 .284.228.51.51.51h5.626s.636 0 .887-.63l1.247-3.083c1.658 2.324 4.387 3.712 7.779 3.712h.741s.64 0 .893-.628l2.172-5.381v5.5a.51.51 0 00.51.51h5.743s.634 0 .888-.63c0 0 2.297-5.705 2.306-5.748h.004c.088-.475-.511-.475-.511-.475h-2.05V2.836l6.45 16.015c.251.628.886.628.886.628h6.786s.638 0 .89-.628l7.151-17.716c.247-.614-.469-.614-.469-.614zM34.893 12.628h-3.858a2.784 2.784 0 110-5.57h1.079a2.788 2.788 0 012.78 2.787v2.783z" fill="#DE2E2E"/></svg>
           <span class="sr-only">NAV</span>
         </a>
-        <div class="self-stretch hidden px-5 ml-8 md:px-8 md:grid">
-          <ul class="flex justify-center gap-4 text-lg md:gap-8" role="tablist">
+        <div class="self-stretch hidden px-6 md:grid">
+          <ul class="flex justify-center  text-lg text-gray-700" role="tablist">
             <li role="tab" aria-selected="true" class="flex">
-              <a href="#" class="flex items-center pt-5 pb-2 border-blue-500 border-b-3">
-                Privatperson
+              <a href="#" class="flex items-center text-gray-900 pt-7 pb-5 px-3 font-semibold border-blue-500 border-b-4">
+                Privat
               </a>
             </li>
             <li role="tab" aria-selected="false" class="flex">
-              <a href="#" class="flex items-center pt-5 pb-2 border-white/0 border-b-3 hover:border-blue-200">
+              <a href="#" class="flex items-center pt-7 pb-5 px-3 border-white/0 border-b-4 hover:border-blue-200">
                 Arbeidsgiver
               </a>
             </li>
             <li role="tab" aria-selected="false" class="flex">
-              <a href="#" class="flex items-center pt-5 pb-2 border-white/0 border-b-3 hover:border-blue-200">
+              <a href="#" class="flex items-center pt-7 pb-5 px-3 border-white/0 border-b-4 hover:border-blue-200">
                 Samarbeidspartner
               </a>
             </li>
           </ul>
         </div>
-        <div class="flex items-end gap-2 pt-2 pb-1 ml-auto -mr-3 xs:pb-0 xs:pt-2">
-          <a class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:bg-blue-50" href="#">
-            <svg class="w-5 h-5 -ml-1 xs:w-6 xs:h-6 shrink-0" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path fill="currentColor" fill-rule="evenodd" d="M19 4h-5V2h5a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3h-5v-2h5c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1Zm-8.3 2.3 5.7 5.7-5.7 5.7-1.4-1.4 3.3-3.3H2v-2h10.6L9.3 7.7l1.4-1.4Z" clip-rule="evenodd"/>
-            </svg>
-            <span class="whitespace-nowrap">Logg inn</span>
-          </a>
+        <div class="flex items-end gap-2 pt-2 pb-2 ml-auto -mr-3">
           <button class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:bg-blue-50" type="button" x-on:click="menuOpen = !menuOpen, searchOpen = false">
             <svg class="w-5 h-5 xs:w-6 xs:h-6 shrink-0" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" focusable="false" aria-hidden="true">
               <path d="M7.20404 4.5C6.8435 5.12327 6.55555 5.79379 6.35177 6.5H0V4.5H7.20404ZM7.20404 13.5C6.8435 12.8767 6.55555 12.2062 6.35177 11.5H0V13.5H7.20404ZM18.7125 20.5L17.3121 18.5H0V20.5H18.7125Z" />
@@ -49,6 +40,12 @@ title: 'Navigasjon'
             </svg>
             <span class="whitespace-nowrap">Meny og søk</span>
           </button>
+          <a class="flex flex-wrap items-center justify-center px-2 py-2 font-semibold text-blue-500 rounded gap-x-2 md:px-3 xs:text-lg hover:bg-blue-50" href="#">
+            <svg class="w-5 h-5 -ml-1 xs:w-6 xs:h-6 shrink-0" width="24" height="24" fill="none" viewBox="0 0 24 24">
+              <path fill="currentColor" fill-rule="evenodd" d="M19 4h-5V2h5a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3h-5v-2h5c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1Zm-8.3 2.3 5.7 5.7-5.7 5.7-1.4-1.4 3.3-3.3H2v-2h10.6L9.3 7.7l1.4-1.4Z" clip-rule="evenodd"/>
+            </svg>
+            <span class="whitespace-nowrap">Logg inn</span>
+          </a>
         </div>
       </div>
     </div>
