--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/main.min.css" type="text/css" />
   {% block style %}{% endblock %}
 </head>
-<body>
+<body class="grid min-h-full overflow-scroll place-items-center">
   {% block content %}{% endblock %}
 </body>
 </html>
