--- a/src/forsiden/forsiden.njk
+++ b/src/forsiden/forsiden.njk
@@ -1,87 +1,35 @@
 ---
-title: 'Forsiden – Privatperson'
+title: 'Forsiden: Privat'
 ---
 {% extends 'base.njk' %}
 
 {% block content %}
   {% include "partials/header.njk" %}
 
-  <main class="bg-gray-100">
+  <main class="bg-white">
     <div class="px-5 py-6 md:py-10 sm:px-8">
-      <div class="grid max-w-screen-xl gap-3 mx-auto md:gap-6 xs:w-11/12">
-        <div class="grid w-full max-w-5xl gap-3 mx-auto xl:w-10/12 md:grid-cols-2 md:gap-6">
-          {% for link in importantLinks %}
-            <a class="flex items-center justify-between gap-2 px-6 py-5 text-blue-500 bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
-              <div class="flex items-center gap-3">
-                {{ link.image | svgContents('w-7 h-7 flex-shrink-0') | safe }}
-                <h3 class="mt-1 text-xl font-semibold leading-tight group-hover:underline ">{{ link.title }}</h3>
+      <div class="max-w-screen-xl mx-auto xs:w-[95%]">
+        <h2 class="text-3xl font-semibold">Hva kan vi hjelpe deg med?</h2>
+        <div class="grid mt-4 gap-3 mx-auto sm:grid-cols-2 lg:grid-cols-3 md:gap-6">
+          {% for service in servicesList %}
+            <a class="relative flex items-center justify-between gap-4 group bg-blue-50 rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl hover:bg-gray-200 focus:shadow-xl h-32 duration-300" href="#">
+              <div class="mt-1 px-6 py-5 text-2xl leading-tight underline group-hover:no-underline flex-1 transition-colors">
+                {{ service.title }}
               </div>
-              <svg aria-hidden="true" focusable="false" class="-mr-2.5" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
-            </a>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-
-    <div class="px-5 py-10 bg-gray-100 sm:px-8">
-      <div class="grid max-w-screen-xl gap-3 mx-auto md:gap-6 xs:w-11/12 ">
-        <h1 class="text-3xl font-semibold text-center sm:text-4xl md:text-5xl">Privatperson</h1>
-        <div class="grid gap-3 md:gap-6 md:grid-cols-3">
-          {% for link in promotedLinks %}
-            <a class="flex flex-col items-center gap-4 px-6 py-8 text-center bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
-              <div class="">{{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 transition duration-200 ease-out text-blue-500') | safe }}</div>
-              <div>
-                <h2 class="mt-1 text-2xl font-semibold leading-tight text-blue-500 group-hover:underline">{{ link.title | safe }}</h2>
-                <p class="mt-1 text-lg leading-snug text-gray-600">{{ link.description | safe }}</p>
+              <div class="absolute inset-0 flex flex-row-reverse items-center rounded overflow-hidden">
+                {{ '/static/images/shapes.svg' | svgContents("absolute group-hover:scale-80 translate-y-12 translate-x-48 group-hover:-translate-x-44 transition-transform duration-300") | safe }}
+                <div class="absolute w-10 h-9 group-hover:-translate-x-10 translate-x-32 translate-y-2 bg-orange-300 transition-all duration-300"></div>
+                <div class="absolute inset-y-0 w-10 translate-x-40  skew-x-[18.9deg] bg-blue-200 self-stretch group-hover:-translate-x-4 transition-all duration-300"></div>
+                <div class="absolute inset-y-0 w-10 group-hover:-translate-x-16 skew-x-[-18.9deg] group-hover:bg-red-200 bg-blue-100 self-stretch scale-[500%] group-hover:scale-100 origin-center translate-x-4 transition-all duration-300"></div>
+                {{ '/static/images/briefcase.svg' | svgContents("absolute group-hover:scale-80 group-hover:translate-y-7 -translate-x-6 group-hover:-translate-x-20 transition-transform duration-300") | safe }}
               </div>
             </a>
-          {% endfor %}
-        </div>
-
-        <h2 class="mt-6 text-2xl font-semibold text-center sm:text-3xl md:text-4xl">Hva er situasjonen din?</h2>
-        <div class="grid gap-3 md:gap-6 md:grid-cols-2 lg:grid-cols-3">
-          {% for link in situationLinks %}
-            <a class="flex items-start gap-4 px-8 py-8 transition duration-200 bg-white rounded shadow group hover:ring-2 hover:ring-blue-500 hover:shadow-xl focus:shadow-xl" href="#">
-              {{ link.image | svgContents('w-8 h-8 flex-shrink-0 group-hover:scale-110 ease-out duration-75 transition text-blue-500') | safe }}
-              <div>
-              <h3 class="mt-1 text-2xl font-semibold leading-tight text-blue-500 group-hover:underline ">{{ link.title | safe }}</h3>
-              <p class="mt-1.5 text-lg leading-snug">{{ link.description | safe }}</p>
-              </div>
-            </a>
-          {% endfor %}
-        </div>
-
-        <div class="grid gap-3 mt-12 md:grid-cols-3 md:gap-6">
-          {% for section in bottomList %}
-          <div class="pr-4 mb-8 sm:max-w-xs break-inside-avoid">
-            <h2 class="text-xl font-semibold">{{ section.title }}</h2>
-            <ul class="flex flex-col items-start">
-            {% for link in section.linkList %}
-              <li class="mb-2">
-                <div class="flex items-start gap-2 mt-2 text-blue-500 hover:text-blue-800 group">
-                  <svg aria-hidden="true" focusable="false" class="w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
-                  <a class="text-lg leading-tight underline hover:no-underline " href="#">{{ link.text }}</a>
-                </div>
-                {% if link.date %}
-                  <div class="pl-5 mt-0.5">{{ link.date }}</div>
-                {% endif %}
-              </li>
-            {% endfor %}
-            </ul>
-            {% if section.extraLink %}
-              <div class="flex items-start gap-2 mt-8 text-blue-500 hover:text-blue-800 group">
-                <svg aria-hidden="true" focusable="false" class="block w-5 h-5 -ml-1.5 flex-shrink-0 group-hover:translate-x-1.5 transition-transform group-hover:ease-out group-hover:duration-200" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M9 5L16 12L9 19.1421" stroke="currentColor" stroke-width="2"/></svg>
-                <a class="text-lg leading-tight hover:underline" href="#">{{ section.extraLink }}</a>
-              </div>
-            {% endif %}
-          </div>
           {% endfor %}
         </div>
 
       </div>
     </div>
   </main>
-  <div class="sticky bottom-0 z-10 w-full h-6 pointer-events-none bg-gradient-to-t from-gray-200 to-gray-100/0 inset-x"></div>
 
   {% include "partials/footer.njk" %}
 
