--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
 
-<div class="px-5 text-white bg-blue-800 sm:px-8">
+<div class="px-5 text-lg text-white bg-deepblue-800 sm:px-8">
   <div class="max-w-screen-lg mx-auto xs:w-11/12 ">
     <div class="flex flex-col items-center py-3">
       <a class="text-lg text-center" href="#">Til toppen</a>
@@ -31,19 +31,19 @@
     </div>
   </div>
 </div>
-<footer class="px-5 py-8 text-gray-600 bg-white sm:px-8">
-  <div class="flex items-start max-w-screen-lg gap-4 mx-auto xs:w-11/12">
-    <svg class="w-16 -translate-y-1.5" viewBox="0 0 84 53" width="84" height="53" aria-hidden="true" focusable="false">
-      <path fill="#000" fill-rule="evenodd" clip-rule="evenodd" d="M39.1 52.9c-14.4 0-26.4-12-26.4-26.4S24.7.1 39.1.1c14.4 0 26.4 12 26.4 26.4 0 14.4-12 26.4-26.4 26.4zM5.4 24.7 0 38h5.2l5.4-13.3H5.4zM66.5 38l5.3-13.3h2.8L69.4 38h-2.9zm15.8-13.3L77 38h1.5l5.3-13.3h-1.5z"/>
-      <path fill="#fefefe" d="M56.9 24.7s-.3 0-.4.3l-2.6 7.9-2.6-7.9c-.1-.3-.4-.3-.4-.3h-9c-.2 0-.4.2-.4.4v2.7c0-2.1-2.3-3.1-3.6-3.1-3 0-5 2-5.6 5 0-2-.2-2.7-.7-3.4-.3-.4-.6-.7-1-.9-.8-.5-1.5-.6-3-.6h-1.8s-.3 0-.4.3L23.6 29v-4c0-.2-.2-.4-.4-.4H19s-.3 0-.4.3L17 29.2s-.2.4.2.4h1.6v8.1c0 .2.2.4.4.4h4.1c.2 0 .4-.2.4-.4v-8.1h1.6c.9 0 1.1 0 1.5.2.2.1.4.2.5.4.2.4.3.9.3 2.4v5.1c0 .2.2.4.4.4h4s.4 0 .6-.4l.9-2.2c1.2 1.6 3.1 2.6 5.5 2.6h.5s.4 0 .6-.4l1.5-3.8v3.9c0 .2.2.4.4.4h4s.4 0 .6-.4l1.6-4c.1-.3-.4-.3-.4-.3h-1.4v-6.9l4.5 11.3c.2.4.6.4.6.4h4.8s.4 0 .6-.4l5-12.5c.2-.4-.3-.4-.3-.4l-4.7-.3zm-15.4 8.5h-2.7c-.5 0-1.1-.2-1.4-.5-.8-.7-.8-2.1 0-2.8.2-.2.4-.3.7-.4.2-.1.5-.1.8-.1h.8a2 2 0 0 1 2 2v1.8z"/>
-    </svg>
-    <div class="mt-3">
-      <div class="pt-px">Arbeids- og velferdsetaten</div>
-      <div class="flex flex-col md:flex-row justify-between flex-1 gap-3 mt-4 md:my-1.5 text-blue-500">
+<footer class="px-5 py-8 text-lg text-white bg-deepblue-800 sm:px-8">
+  <div class="max-w-screen-lg gap-4 mx-auto xs:w-11/12">
+    <div class="flex items-end justify-between">
+      <div class="grid gap-2 mt-3">
+        <svg class="w-16 h-5" width="64" height="20" fill="none" aria-hidden="true" role="img" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M63.48.52h-6.66s-.459 0-.621.406l-3.685 11.287L48.832.926c-.163-.405-.624-.405-.624-.405H35.404a.514.514 0 00-.51.507v3.833c0-3.04-3.233-4.34-5.127-4.34-4.24 0-7.078 2.794-7.962 7.043-.048-2.819-.282-3.829-1.041-4.863-.349-.507-.852-.932-1.4-1.285-1.13-.662-2.145-.895-4.324-.895h-2.56s-.462 0-.625.405L9.526 6.7V1.028A.512.512 0 009.02.521H3.097s-.457 0-.624.405L.053 6.93s-.242.6.31.6H2.64v11.44c0 .284.223.51.508.51h5.87a.509.509 0 00.508-.51V7.53h2.289c1.313 0 1.59.036 2.101.274.308.117.585.352.737.623.31.583.387 1.283.387 3.348v7.195c0 .284.228.51.51.51h5.626s.636 0 .887-.63l1.247-3.083c1.658 2.324 4.387 3.712 7.779 3.712h.741s.64 0 .893-.628l2.172-5.381v5.5a.51.51 0 00.51.51h5.743s.634 0 .888-.63c0 0 2.297-5.705 2.306-5.748h.004c.088-.475-.511-.475-.511-.475h-2.05V2.836l6.45 16.015c.251.628.886.628.886.628h6.786s.638 0 .89-.628l7.151-17.716c.247-.614-.469-.614-.469-.614zM34.893 12.628h-3.858a2.784 2.784 0 110-5.57h1.079a2.788 2.788 0 012.78 2.787v2.783z" fill="currentColor"/></svg>
+        <div class="pt-px">Arbeids- og velferdsetaten</div>
+      </div>
+
+      <div class="flex flex-col md:flex-row justify-between gap-4 mt-3 md:my-1.5">
         <a class="underline hover:no-underline" href="#">Personvern og informasjonskapsler</a>
         <a class="underline hover:no-underline" href="#">Tilgjengelighet</a>
         <a class="underline hover:no-underline" href="#">Del skjerm med veileder</a>
-        </div>
+      </div>
     </div>
   </div>
 </footer>
